# xorg-xvnc4

./: buildX.sh
buildtemp/: Makefile
buildtemp/network/: Makefile
buildtemp/rdr/: Makefile
buildtemp/rfb/: Makefile
buildtemp/tx/: Makefile
buildtemp/vncconfig/: vncconfig
common/: Makefile  config.cache  config.status
common/Xregion/: Makefile
common/rfb/: ComparingUpdateTracker.cxx  Makefile  PixelBuffer.cxx
common/zlib/: example  minigzip
debian/: buildX.sh  changelog  control  files  rules  vnc.conf  vnc4-common.install  vnc4-common.postinst  vnc4-common.prerm  vnc4-common.substvars  vnc4server.install  vnc4server.postinst  vnc4server.prerm  vnc4server.substvars  xvnc4viewer.substvars
debian/ex/: README.Debian  conffiles.ex  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  vnc4-default.ex  vnc4.doc-base.EX  watch.ex
debian/patches/: xorg-vnc-debian.patch
tests/: .gitignore  01-start.sh  01-xdpyinfo-out.txt  01-xrandr-out.txt  02-resize.sh  02-xdpyinfo.txt  02-xrandr-get.txt  start1-xdpyinfo-out.txt  start1-xrandr-out.txt
unix/: config.cache  config.status
unix/vncconfig/: Makefile  vncconfig
unix/vncpasswd/: Makefile  vncpasswd
unix/vncviewer/: Makefile  vncviewer
unix/x0vncserver/: Makefile  x0vncserver
xorg-server/: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  c.sh  config.status  configure  configure.ac  libtool  patch-stamp  xorg-config2.h  xorg-server.pc
xorg-server/GL/: Makefile  Makefile.in
xorg-server/XTrap/: Makefile  Makefile.in  libxtrap.la  xtrapddmi.lo  xtrapdi.lo  xtrapdiswp.lo  xtrapditbl.lo
xorg-server/Xext/: EVI.lo  Makefile  Makefile.in  appgroup.lo  bigreq.lo  cup.lo  dpms.lo  libXext.la  libXextbuiltin.la  libXextmodule.la  mitmisc.lo  panoramiX.lo  panoramiXSwap.lo  panoramiXprocs.lo  sampleEVI.lo  saver.lo  security.lo  shape.lo  shm.lo  sleepuntil.lo  sync.lo  xace.lo  xcmisc.lo  xevie.lo  xf86bigfont.lo  xres.lo  xtest.lo  xvdisp.lo  xvmain.lo  xvmc.lo
xorg-server/dix/: gc.lo  (+27 more)
xorg-server/hw/vnc/: Makefile  Makefile.am  Makefile.in  XserverDesktop.cc  XserverDesktop.h  Xvnc-randr.c  Xvnc-randr.lo  buildtime.lo  cfb.h  fb.h  fbrop.h  libvnc.la  libvnc_la-xf86vncModule.lo  libvnccommon.la  libvnccommon_la-XserverDesktop.lo  libvnccommon_la-vncExtInit.lo  libvnccommon_la-vncHooks.lo  vnc.h  vncExtInit.cc  xvnc.cc
(+1075 files in other folders)
